--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "dev": "vue-cli-service serve",
+    "build:prod": "vue-cli-service build",
+    "build:staging": "vue-cli-service build --mode staging",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "md5": "^2.2.1",
     "vant": "^2.5.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
@@ -31,6 +33,7 @@
     "less-loader": "^5.0.0",
     "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^1.19.1",
+    "script-ext-html-webpack-plugin": "^2.1.4",
     "vue-template-compiler": "^2.6.11"
   }
 }
