feat:新增utils工具类

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 ENV = 'development'
 
-VUE_APP_BASE_API = '/dev-api'
+VUE_APP_BASE_API = 'http://hotel-b.qhyxsw.com/'
 
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
