--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 ENV = 'development'
 
-VUE_APP_BASE_API = 'http://hotel-b.qhyxsw.com/'
+VUE_APP_BASE_API = 'proxy/dev/'
 
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
