--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "prettier": "^1.19.1",
     "script-ext-html-webpack-plugin": "^2.1.4",
     "vue-template-compiler": "^2.6.11"
-  }
+  },
+  "browserslist": [
+    "Android >= 4.0",
+    "iOS >= 7"
+  ]
 }
