--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vant": "^2.5.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
+    "vue2-touch-events": "^2.2.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
