--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "md5": "^2.2.1",
+    "moment": "^2.24.0",
     "qs": "^6.9.1",
     "vant": "^2.5.3",
     "vue": "^2.6.11",
