--- a/.env.staging
+++ b/.env.staging
@@ -4,4 +4,4 @@ NODE_ENV = production
 ENV = 'staging'
 
 # base api
-VUE_APP_BASE_API = 'http://hotel-b.qhyxsw.com/'
+VUE_APP_BASE_API = '/proxy-staging'
