--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^1.19.1",
     "script-ext-html-webpack-plugin": "^2.1.4",
+    "terser-webpack-plugin": "^2.3.5",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
