--- a/.env.staging
+++ b/.env.staging
@@ -4,4 +4,5 @@ NODE_ENV = production
 VUE_APP_ENV = 'staging'
 
 # base api
-VUE_APP_BASE_API = '/proxy-staging'
+# VUE_APP_BASE_API = '/proxy-staging'
+VUE_APP_BASE_API = 'http://hotel-c.qhyxsw.com/'
