fix:修复生产环境支付

--- a/.env.staging
+++ b/.env.staging
@@ -5,4 +5,4 @@ VUE_APP_ENV = 'staging'
 
 # base api
 # VUE_APP_BASE_API = '/proxy-staging'
-VUE_APP_BASE_API = 'http://hotel-c.qhyxsw.com/'
+VUE_APP_BASE_API = 'http://hotel-c.qhyxsw.com'
